# CppWorkSpace

./: CMakeLists.txt  README.md
Demo/src/: Logger.cpp  Logger.h  Server.cpp  drop_to_rewrite.cpp  main.cpp  mfc_copydata.cpp  mine.cpp  tang.h  win32_copydata.cpp  win32_receive.cpp  win32_send.cpp
Demo/src/Logger/: Logger.h
Demo/src/Utility/: FileWriter.hpp  Singleton.hpp
SimulateDpu/: CMakeLists.txt
SimulateDpu/include/ftxui/screen/: screen.hpp
SimulateDpu/lib/Win64/: ftxui-component.lib  ftxui-dom.lib  ftxui-screen.lib
SimulateDpu/lib/jsoncpp-master/: jsoncppConfig.cmake.in
SimulateDpu/src/: main.cpp  print.cpp
SimulateDpu/src/Interface/: HomePage.cpp
SimulateDpu/src/UserInterface/: HomePage.cpp  HomePage.h  ftxui-screen.lib
SimulateDpu/src/Utilities/: TimeTools.cpp  TimeTools.h
src/: main.cpp
